                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 03-08-2005 fixed: Eject after playing media on disk would crash.
 - 03-08-2005 fixed: my music, scan button does not immediately show "Stop Scan" label when scan is started
 - 03-08-2005 fixed: HTTPAPI: Pause command
 - 03-08-2005 fixed: mplayer was unable to find certain dlls, this resulted in unplayable dvds
 - 02-08-2005 fixed: Position of subs could change with seek or volume change.
 - 02-08-2005 fixed: Python dialogs wouldn't render.
 - 02-08-2005 added: More stuff for the new video OSD system.
 - 02-08-2005 fixed: more menu fixes for the dvd player (dlls in \system\players\dvdplayer\ have to be updated)
 - 02-08-2005 updated: libdvdcss for dvdplayer to v1.2.9
 - 02-08-2005 added: Initial support for audio and subtitle settings to new video OSD layout (currently disabled)
 - 02-08-2005 fixed: DialogSeekBar was unloaded when it was closed, rather than on app close.
 - 02-08-2005 fixed: SITE HELP command wasn't spec-correct.  Thanks to ljardine.
 - 02-08-2005 updated: kai-vectors.xml (Thx to Puma81)
 - 01-08-2005 fixed: dvdplayer crashed at the end of certain files
 - 01-08-2005 fixed: async audiorenderer reported somewhat wrong audiodelay to player, caused more early/late frames in mplayer
 - 01-08-2005 updated: mplayer.dll to cvs version( new ffmpeg, interlaced flag, cache uninit fix)
 - 01-08-2005 added: more memory error handling in DLLLoader, should avoid some hardlocks when mplayer crashes
 - 01-08-2005 fixed: Extra button press needed to cancel visualisation screensaver mode.